version 0.34
	* Fix loading and saving logic : when loading an iCalendar,
	  we used to refresh the view for each appointment and task.
	  Should be quite faster when loading a big calendar. Also, 
	  stop saving unmodified local calendars on exit.

version 0.33 (2007/12/08)
	* Fix dates of summary events
	* Add a visual hint for recurrent events
	* Fix iCalendar date and duration encoding
	* Fix pasteboard interaction
	* Draw appointments with transparency (code from old 
	  http://www.linuks.mine.nu/agenda/agenda-0.1.tar.gz)

version 0.32 (2007/12/07)
	* Add 'SimpleAgenda/Create Task' service
	* Internal modifications and refactoring
	* Add Open tasks category to summary view
	* Enable 24 hours DayView
	* Change iCalStore creation to set store writable flag if 
	  possible without erasing existing data 
	* Show days with appointments in MonthView.
	* Real asynchronous startup for remote stores. Thanks to 
	  Dennis Leeuw for this bug report (and many others)
	* Fix end date processing for recurrent events : events can 
	  repeat for ever or until a specified date

version 0.31 (2007/11/21)
	* Bug fixes
	* Appointments sorted by date in the summary
	* Deleted code to read old Date objects encoding
	* Update search results when store data change

version 0.30 (2007/11/12)
	* Refactor code to handle multiple kinds of events
	* Add simple task (iCalendar VTODO) support
	* Add a task view
	* Coherent ui : in summary, day view and task view, 
	  simple click to select and double click to edit
	* Make calendar view smaller
	* Fix appointment resize bug in day view

version 0.29 (2007/11/02)
	* Preferences dialog uses a popup to select categories (r276)
	* Events text color selectable in store preferences
	* Fix time zone bugs
	* Fix iCal authenticated loading 

version 0.28
	* Simple text search

version 0.27 (2007/09/18)
	* Fix keyboard handling in the day view
	* Add store creation in preferences dialog
	* Load iCal stores asynchronously